public/css/app.css
/* ... */
/* RADIO BUTTONS  */

input[type="radio"] {
  height: 0;
  width: 0;
  margin: 0;
  padding: 0;
  visibility: hidden;
}

.radio-button-group {
  border: 1px solid rgba(255, 255, 255, 0);
  margin-top: var(--gap);
  margin-bottom: var(--gap);
  min-height: 30px;
  cursor: pointer;
  position: relative;
  display: flex;
  align-items: center;
}

.radio-button-group label {
  width: 100%;
  line-height: 1.2;
  font-size: 15px;
  padding-left: 30px;
  cursor: pointer;
  user-select: none;
}

span.radio-dot {
  height: 19px;
  width: 19px;
  background-color: rgba(255, 255, 255, 0.9);
  border: 1px solid rgba(255, 255, 255, 0);
  border-radius: 50%;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  margin: auto;
}

.radio-button-group:hover span.radio-dot,
.radio-button-group:focus span.radio-dot {
  background-color: rgba(255, 255, 255, 0.5);
  border: 4px solid rgba(255, 255, 255, 0.4);
}

.radio-button-group input:checked ~ .radio-dot {
  background-color: rgba(255, 255, 255, 0.3);
  border: 5px solid rgba(255, 255, 255, 1);
}

.radio-button-group:focus label,
.radio-button-group:hover label {
  color: rgba(255, 255, 255, 1);
}

.radio-button-group .radio-dot,
.radio-button-group:hover .radio-dot,
.radio-button-group:focus .radio-dot,
.radio-button-group label,
.radio-button-group:hover label,
.radio-button-group:focus label {
  transition: color 0.1s ease, background-color 0.1s ease, border 0.1s ease;
}

/* CHECKBOXES */

input[type="checkbox"] {
  flex: 0 0 auto;
  width: 20px;
  height: 20px;
  pointer-events: none;
  border: 1px solid var(--grey90a3);
  border-radius: var(--roundedCorners);
  margin: 12px 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  background-image: url("/img/checkbox-check.svg");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 70%;
}

.checkbox-group {
  align-items: flex-start;
  display: flex;
  pointer-events: all;
  cursor: pointer;
}

input[type="checkbox"]:checked {
  background-color: var(--blue60);
  border: 1px solid var(--blue60);
}

.checkbox-group:hover input[type="checkbox"] {
  border-color: var(--grey90a4);
}

.checkbox-group:hover input[type="checkbox"]:checked {
  border-color: 1px solid var(--blue60);
}

.checkbox-group label {
  font-size: 13px;
  margin: 12px;
  cursor: pointer;
  pointer-events: none;
  white-space: normal;
  text-align: left;
  color: var(--grey90a6);
}

/* BUTTONS */

button,
a.button {
  width: 100%;
  line-height: 1.2;
  min-height: 55px;
  min-width: 150px;
  padding: 10px 5px;
  -webkit-appearance: none;
  border: none;
  border-radius: var(--roundedCorners);
  cursor: pointer;
  text-align: center;
  text-indent: 0;
  white-space: normal;
  background-color: var(--green60);
  color: rgba(254, 254, 254, 1);
  font-family: inherit;
  font-size: 20px;
  font-weight: 500;
}

a.button {
  line-height: 55px;
}

button:hover,
.button:hover {
  background-color: var(--green70);
}

button[type="button"],
button[type="submit"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  border-radius: var(--roundedCorners);
}

button:focus::-moz-focus-inner,
input:focus::-moz-focus-inner {
  border: 0;
}

.transparent-button,
input[type="submit"].transparent-button {
  font-size: 17px;
  background-color: rgba(255, 255, 255, 0);
  border: 2px solid rgba(255, 255, 255, 1);
  color: rgba(255, 255, 255, 1);
  border-radius: 0;
}

.transparent-button:hover,
input[type="submit"].transparent-button:hover {
  background-color: rgba(255, 255, 255, 0.1);
  border: 2px solid rgba(255, 255, 255, 1);
}

button.transparent-button:active,
input[type="submit"].transparent-button:active {
  background-color: rgba(0, 0, 0, 0.08) !important;
}

.blue-button {
  background-color: var(--blue60);
}

.blue-button:hover {
  background-color: var(--blue70);
}

/* /////// ERROR MESSAGES */

.form-group .error-message {
  display: block;
  background: var(--red60);
  border-radius: var(--roundedCorners);
  color: #fff;
  padding: 5px 12px;
  position: absolute;
  bottom: -44px;
  left: -1px;
  z-index: 3;
  font-size: 13px;
  opacity: 0;
  pointer-events: none;
}

.form-group .error-message::before {
  opacity: 0;
  background: #d70022;
  top: -7px;
  content: '.';
  height: 16px;
  position: absolute;
  text-indent: -999px;
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  white-space: nowrap;
  width: 16px;
  z-index: -1;
}

/* INVALID FORM STYLING */

.form-group.invalid .error-message,
.form-group.invalid .error-message::before {
  opacity: 1;
}

.form-group.invalid input[type="email"] {
  border: 1px solid var(--red50);
  box-shadow: 0 0 0 1px rgba(255, 0, 55, 0.514), 0 0 0 4px rgba(255, 0, 55, 0.3);
}

.form-group.invalid input:focus {
  outline: none;
}

/* // FORM-LOADING  */

.form-group img {
  z-index: 1;
  position: absolute;
  left: 12px;
  margin: auto;
  top: 0;
  bottom: 0;
  opacity: 1;
  pointer-events: none;
}

.form-group .loader {
  visibility: hidden;
  height: 0;
  width: 0;
  opacity: 0;
  left: 0;
  right: 0;
}

.form-group.loading-data .button,
.form-group.loading-data input::placeholder,
.form-group.loading-data input {
  color: rgba(0, 0, 0, 0) !important;
}

.form-group.loading-data .loader {
  display: block;
  opacity: 0.58;
  width: 25px;
  height: auto;
  visibility: visible;
}

.form-group.loading-data .search-icon {
  opacity: 0;
}

/* ///////// PRIVACY POLICY  */

.privacy-policy {
  display: block;
  font-size: 13px;
  margin-top: calc(var(--gap) / 2);
}

/* typography */

h1,
h2,
h3,
h4,
h5,
.section-headline {
  font-weight: 300;
}

.demi {
  font-weight: 400;
}

.medium {
  font-weight: 500;
}

.bold {
  font-weight: 600;
}

/* internal link styling  */

.internal-link {
  color: var(--blue60);
}

.internal-link:hover {
  text-decoration: underline;
}

.internal-link:active {
  color: var(--blue70);
}

.internal-link:focus {
  box-shadow: 0 0 0 2px #0a84ff, 0 0 0 6px rgba(10, 132, 255, 0.3);
}
/* ... */

